--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/plurriel/tlsreg#readme",
   "dependencies": {
+    "@upstash/redis": "^1.22.0",
     "acme-client": "^5.0.0",
     "amqplib": "^0.10.3",
+    "bson": "^5.4.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.20.0"
   },
